Fresh run of notebook

--- a/module2-04-prdsj/module2-04-prdsj.ipynb
+++ b/module2-04-prdsj/module2-04-prdsj.ipynb
@@ -248,7 +248,7 @@
     {
      "data": {
       "text/plain": [
-       "\"/home/alanderos/jl_IRzJ3b\""
+       "\"/home/alanderos/jl_i51M0P\""
       ]
      },
      "execution_count": 2,
@@ -357,7 +357,7 @@
       "\n",
       "\n",
       "\n",
-      "Do you want to download the dataset from http://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data to \"/home/alanderos/jl_IRzJ3b/iris\"?\n",
+      "Do you want to download the dataset from http://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data to \"/home/alanderos/jl_i51M0P/iris\"?\n",
       "[y/n]\n",
       "stdin> y\n"
      ]
@@ -368,11 +368,11 @@
      "text": [
       "┌ Info: Downloading\n",
       "│   source = http://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data\n",
-      "│   dest = /home/alanderos/jl_IRzJ3b/iris/iris.data\n",
+      "│   dest = /home/alanderos/jl_i51M0P/iris/iris.data\n",
       "│   progress = 1.0\n",
       "│   time_taken = 0.03 s\n",
       "│   time_remaining = 0.0 s\n",
-      "│   average_speed = 134.677 KiB/s\n",
+      "│   average_speed = 143.365 KiB/s\n",
       "│   downloaded = 4.444 KiB\n",
       "│   remaining = 0 bytes\n",
       "│   total = 4.444 KiB\n",
@@ -385,7 +385,7 @@
     {
      "data": {
       "text/plain": [
-       "\"/home/alanderos/jl_IRzJ3b/iris\""
+       "\"/home/alanderos/jl_i51M0P/iris\""
       ]
      },
      "execution_count": 5,
@@ -630,7 +630,7 @@
       "\n",
       "\n",
       "\n",
-      "Do you want to download the dataset from http://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data to \"/home/alanderos/jl_IRzJ3b/iris\"?\n",
+      "Do you want to download the dataset from http://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data to \"/home/alanderos/jl_i51M0P/iris\"?\n",
       "[y/n]\n",
       "stdin> y\n"
      ]
@@ -641,11 +641,11 @@
      "text": [
       "┌ Info: Downloading\n",
       "│   source = http://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data\n",
-      "│   dest = /home/alanderos/jl_IRzJ3b/iris/iris.data\n",
+      "│   dest = /home/alanderos/jl_i51M0P/iris/iris.data\n",
       "│   progress = 1.0\n",
       "│   time_taken = 0.0 s\n",
       "│   time_remaining = 0.0 s\n",
-      "│   average_speed = 4.340 MiB/s\n",
+      "│   average_speed = ∞ B/s\n",
       "│   downloaded = 4.444 KiB\n",
       "│   remaining = 0 bytes\n",
       "│   total = 4.444 KiB\n",
@@ -1209,7 +1209,7 @@
       "\n",
       "\n",
       "\n",
-      "Do you want to download the dataset from [\"https://archive.ics.uci.edu/ml/machine-learning-databases/breast-cancer-wisconsin/breast-cancer-wisconsin.data\", \"https://archive.ics.uci.edu/ml/machine-learning-databases/breast-cancer-wisconsin/wdbc.data\"] to \"/home/alanderos/jl_IRzJ3b/breast-cancer-wisconsin\"?\n",
+      "Do you want to download the dataset from [\"https://archive.ics.uci.edu/ml/machine-learning-databases/breast-cancer-wisconsin/breast-cancer-wisconsin.data\", \"https://archive.ics.uci.edu/ml/machine-learning-databases/breast-cancer-wisconsin/wdbc.data\"] to \"/home/alanderos/jl_i51M0P/breast-cancer-wisconsin\"?\n",
       "[y/n]\n",
       "stdin> y\n"
      ]
@@ -1220,22 +1220,22 @@
      "text": [
       "┌ Info: Downloading\n",
       "│   source = https://archive.ics.uci.edu/ml/machine-learning-databases/breast-cancer-wisconsin/breast-cancer-wisconsin.data\n",
-      "│   dest = /home/alanderos/jl_IRzJ3b/breast-cancer-wisconsin/breast-cancer-wisconsin.data\n",
+      "│   dest = /home/alanderos/jl_i51M0P/breast-cancer-wisconsin/breast-cancer-wisconsin.data\n",
       "│   progress = 1.0\n",
       "│   time_taken = 0.0 s\n",
       "│   time_remaining = 0.0 s\n",
-      "│   average_speed = ∞ B/s\n",
+      "│   average_speed = 9.484 MiB/s\n",
       "│   downloaded = 19.423 KiB\n",
       "│   remaining = 0 bytes\n",
       "│   total = 19.423 KiB\n",
       "└ @ HTTP /home/alanderos/.julia/packages/HTTP/S5kNN/src/download.jl:132\n",
       "┌ Info: Downloading\n",
       "│   source = https://archive.ics.uci.edu/ml/machine-learning-databases/breast-cancer-wisconsin/wdbc.data\n",
-      "│   dest = /home/alanderos/jl_IRzJ3b/breast-cancer-wisconsin/wdbc.data\n",
+      "│   dest = /home/alanderos/jl_i51M0P/breast-cancer-wisconsin/wdbc.data\n",
       "│   progress = 1.0\n",
-      "│   time_taken = 0.03 s\n",
+      "│   time_taken = 0.04 s\n",
       "│   time_remaining = 0.0 s\n",
-      "│   average_speed = 4.081 MiB/s\n",
+      "│   average_speed = 3.382 MiB/s\n",
       "│   downloaded = 121.194 KiB\n",
       "│   remaining = 0 bytes\n",
       "│   total = 121.194 KiB\n",
@@ -1245,7 +1245,7 @@
     {
      "data": {
       "text/plain": [
-       "\"/home/alanderos/jl_IRzJ3b/breast-cancer-wisconsin\""
+       "\"/home/alanderos/jl_i51M0P/breast-cancer-wisconsin\""
       ]
      },
      "execution_count": 18,
@@ -1284,7 +1284,7 @@
     {
      "data": {
       "text/plain": [
-       "Process(`\u001b[4mls\u001b[24m \u001b[4m/home/alanderos/jl_IRzJ3b/breast-cancer-wisconsin\u001b[24m`, ProcessExited(0))"
+       "Process(`\u001b[4mls\u001b[24m \u001b[4m/home/alanderos/jl_i51M0P/breast-cancer-wisconsin\u001b[24m`, ProcessExited(0))"
       ]
      },
      "execution_count": 19,
@@ -1378,7 +1378,7 @@
     {
      "data": {
       "text/plain": [
-       "Process(`\u001b[4mcat\u001b[24m \u001b[4m-n\u001b[24m \u001b[4m/home/alanderos/jl_IRzJ3b/breast-cancer-wisconsin/bcw.info\u001b[24m`, ProcessExited(0))"
+       "Process(`\u001b[4mcat\u001b[24m \u001b[4m-n\u001b[24m \u001b[4m/home/alanderos/jl_i51M0P/breast-cancer-wisconsin/bcw.info\u001b[24m`, ProcessExited(0))"
       ]
      },
      "execution_count": 21,
@@ -1493,7 +1493,7 @@
     {
      "data": {
       "text/plain": [
-       "Process(`\u001b[4mcat\u001b[24m \u001b[4m-n\u001b[24m \u001b[4m/home/alanderos/jl_IRzJ3b/breast-cancer-wisconsin/wdbc.info\u001b[24m`, ProcessExited(0))"
+       "Process(`\u001b[4mcat\u001b[24m \u001b[4m-n\u001b[24m \u001b[4m/home/alanderos/jl_i51M0P/breast-cancer-wisconsin/wdbc.info\u001b[24m`, ProcessExited(0))"
       ]
      },
      "execution_count": 23,
@@ -1515,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "id": "cf639ecc",
    "metadata": {},
    "outputs": [
@@ -1525,7 +1525,7 @@
        "spirals (generic function with 1 method)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1601,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "id": "efae0a5c",
    "metadata": {},
    "outputs": [
@@ -1623,7 +1623,7 @@
        "FigureAxisPlot()"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1638,26 +1638,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "id": "7dbe829c",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Warning: Over-writing registration of the datadep\n",
-      "│   name = spirals\n",
-      "└ @ DataDeps /home/alanderos/.julia/packages/DataDeps/EDWdQ/src/registration.jl:15\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "DataDep{String, String, var\"#13#15\", typeof(identity)}(\"spirals\", \"unused\", \"42d5c3404511db5ab48ab2224ac2d2959c82a47dd4b108fbabb3dfb27631d782\", var\"#13#15\"(), identity, \"Dataset: spirals\\nCredit: https://smorbieu.gitlab.io/generate-datasets-to-understand-some-clustering-algorithms-behavior/\\n\\nA simulated dataset of three noisy spirals. Bayes error is approximately 0%.\\n\\nObservations: 1000\\nFeatures:     2\\nClasses:      3\\n\")"
+       "DataDep{String, String, var\"#9#11\", typeof(identity)}(\"spirals\", \"unused\", \"42d5c3404511db5ab48ab2224ac2d2959c82a47dd4b108fbabb3dfb27631d782\", var\"#9#11\"(), identity, \"Dataset: spirals\\nCredit: https://smorbieu.gitlab.io/generate-datasets-to-understand-some-clustering-algorithms-behavior/\\n\\nA simulated dataset of three noisy spirals. Bayes error is approximately 0%.\\n\\nObservations: 1000\\nFeatures:     2\\nClasses:      3\\n\")"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1711,7 +1702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "id": "5fff546b",
    "metadata": {},
    "outputs": [
@@ -1733,21 +1724,23 @@
       "\n",
       "\n",
       "\n",
-      "Do you want to download the dataset from unused to \"/home/alanderos/jl_IRzJ3b/spirals\"?\n",
+      "Do you want to download the dataset from unused to \"/home/alanderos/jl_i51M0P/spirals\"?\n",
       "[y/n]\n",
       "stdin> y\n",
-      "[  spiral: 1000 instances / 2 features / 3 classes  ]\n",
+      "\n",
+      "[  spirals: 1000 instances / 2 features / 3 classes  ]\n",
       "  ∘ Pr(y | x) = 1.0\n",
-      "  ∘ 0 class inversions (0.0 Bayes error)\n"
+      "  ∘ 0 class inversions (0.0 Bayes error)\n",
+      "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "\"/home/alanderos/jl_IRzJ3b/spirals\""
+       "\"/home/alanderos/jl_i51M0P/spirals\""
       ]
      },
-     "execution_count": 31,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1758,7 +1751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 28,
    "id": "4f8ee9dc",
    "metadata": {},
    "outputs": [
@@ -1769,7 +1762,7 @@
        "FigureAxisPlot()"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1824,7 +1817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
    "id": "d8c588dd",
    "metadata": {},
    "outputs": [
