Use /tmp/ for DataDep module

--- a/module2-03-DataDeps/module2-03-DataDeps.ipynb
+++ b/module2-03-DataDeps/module2-03-DataDeps.ipynb
@@ -270,7 +270,7 @@
     "if haskey(ENV, \"DATADEPS_LOAD_PATH\")\n",
     "    rm(ENV[\"DATADEPS_LOAD_PATH\"])\n",
     "end\n",
-    "ENV[\"DATADEPS_LOAD_PATH\"] = mktempdir(\"/home/alanderos/\")"
+    "ENV[\"DATADEPS_LOAD_PATH\"] = mktempdir(\"/tmp/\")"
    ]
   },
   {
