--- a/module1-03-Python/module1-03-Python.ipynb
+++ b/module1-03-Python/module1-03-Python.ipynb
@@ -40,15 +40,50 @@
     "\n",
     "All the packages above are included in the [Anaconda distribution](https://www.anaconda.com/products/distribution) of Python. If you download Anaconda, it comes with all the useful scientific programming packages. Packages used in this workshop are in bold.\n",
     "\n",
-    "\n",
-    "## Pandas\n",
-    "\n",
-    "Pandas is a Python library for working with datasets. It supports data frame structure like in R. \n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "4813ef46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commit_hash': '3813660de',\n",
+      " 'commit_source': 'installation',\n",
+      " 'default_encoding': 'utf-8',\n",
+      " 'ipython_path': '/Users/kose/opt/anaconda3/lib/python3.9/site-packages/IPython',\n",
+      " 'ipython_version': '7.29.0',\n",
+      " 'os_name': 'posix',\n",
+      " 'platform': 'macOS-10.16-x86_64-i386-64bit',\n",
+      " 'sys_executable': '/Users/kose/opt/anaconda3/bin/python',\n",
+      " 'sys_platform': 'darwin',\n",
+      " 'sys_version': '3.9.7 (default, Sep 16 2021, 08:50:36) \\n[Clang 10.0.0 ]'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import IPython\n",
+    "print(IPython.sys_info())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c5beedf",
+   "metadata": {},
+   "source": [
+    "## Pandas\n",
+    "\n",
+    "Pandas is a Python library for working with datasets. It supports data frame structure like in R. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "5c509007",
    "metadata": {},
    "outputs": [],
@@ -78,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b8fb15c0",
    "metadata": {},
    "outputs": [
@@ -148,8 +183,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5ac4dbce-1b22-4cdb-bd47-33839dbb617d",
+   "metadata": {},
+   "source": [
+    "You may press `Shift-Tab` to see the function documentation interactively, or typing `?pd.read_csv` in the code cell. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "00b258da",
    "metadata": {},
    "outputs": [
@@ -159,7 +202,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d5d92363",
    "metadata": {},
    "outputs": [
@@ -294,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "6393a23d",
    "metadata": {},
    "outputs": [
@@ -334,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "b5794f98",
    "metadata": {},
    "outputs": [],
@@ -344,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "075d4dcb",
    "metadata": {},
    "outputs": [
@@ -352,7 +395,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed time:  32.288973326000004\n"
+      "Elapsed time:  39.48315167\n"
      ]
     }
    ],
@@ -370,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "a043a839",
    "metadata": {},
    "outputs": [
@@ -409,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "fb380953",
    "metadata": {},
    "outputs": [
@@ -489,7 +532,7 @@
        "16  30600691.0 2165-04-24 08:00:00  220045.0      56.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "004ae9ef",
    "metadata": {},
    "outputs": [],
@@ -519,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "467785e9",
    "metadata": {},
    "outputs": [
@@ -529,7 +572,7 @@
        "<AxesSubplot:xlabel='charttime', ylabel='valuenum'>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -561,7 +604,7 @@
     "#### Note: Method Chaining\n",
     "One may use method chaining for linearizing method calls, as above. As the dot operator(`.`) is evaluated from left to right, one may \"chain\" another method call or attribute access right after obtaining the result of the previous method call or attribute access. This is a \"pythonic\" way of avoiding nested calls.\n",
     "\n",
-    "One limitation is that we can only do this for methods or attributes of a class. In this case, `print()` is not a method of `DataFrame`, we cannot chain `print` as what we did in R. \n",
+    "One limitation is that we can only do this for methods or attributes of a class. In this case, `print()` is not a method of `DataFrame`, we cannot chain `print` as what we did in R. One may use [`pandas.DataFrame.pipe()`](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.pipe.html) method for such operations. \n",
     "There are packages that implement pipe by overloading other operator (e.g., the bitwise or (`|`) operator). "
    ]
   },
@@ -617,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "7c825e61",
    "metadata": {},
    "outputs": [
@@ -700,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "d6e3364c",
    "metadata": {},
    "outputs": [],
@@ -728,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "bb66eaf5",
    "metadata": {},
    "outputs": [
@@ -880,7 +923,7 @@
        "[53136 rows x 5 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "006c49f0",
    "metadata": {},
    "outputs": [],
@@ -926,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "e2c386e8",
    "metadata": {},
    "outputs": [
@@ -1326,7 +1369,7 @@
        "[53150 rows x 34 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1354,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "8e05a328",
    "metadata": {},
    "outputs": [
@@ -1555,7 +1598,7 @@
        "max       941.000000  12262.000000  140119.000000    106.000000    180.000000  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1593,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "5b9e5899",
    "metadata": {},
    "outputs": [
@@ -1612,7 +1655,7 @@
        "Name: first_careunit, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1623,7 +1666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "1ba82f5c",
    "metadata": {},
    "outputs": [
@@ -1635,7 +1678,7 @@
        "Name: gender, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1646,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "46bf2337",
    "metadata": {},
    "outputs": [
@@ -1664,7 +1707,7 @@
        "Name: ethnicity, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1691,7 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "250f373b",
    "metadata": {},
    "outputs": [],
@@ -1710,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "fc0e306e",
    "metadata": {},
    "outputs": [
@@ -1720,7 +1763,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1741,7 +1784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "64807bae",
    "metadata": {},
    "outputs": [
@@ -1751,7 +1794,7 @@
        "<AxesSubplot:ylabel='Frequency'>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1772,7 +1815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "dcfd4d7c",
    "metadata": {},
    "outputs": [
@@ -1782,7 +1825,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1841,7 +1884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "9beee688",
    "metadata": {},
    "outputs": [
@@ -1851,7 +1894,7 @@
        "<AxesSubplot:xlabel='first_careunit'>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1876,7 +1919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "f718e73d",
    "metadata": {},
    "outputs": [
@@ -1886,7 +1929,7 @@
        "<AxesSubplot:xlabel='first_careunit'>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1919,7 +1962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "35cfec00",
    "metadata": {},
    "outputs": [
@@ -1929,7 +1972,7 @@
        "<AxesSubplot:xlabel='gender'>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1954,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "7ecbb45f",
    "metadata": {},
    "outputs": [
@@ -1964,7 +2007,7 @@
        "<AxesSubplot:xlabel='gender'>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1988,6 +2031,73 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "5f18642a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>thirty_day_mort</th>\n",
+       "      <th>False</th>\n",
+       "      <th>True</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gender</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>F</th>\n",
+       "      <td>0.895088</td>\n",
+       "      <td>0.104912</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>0.904420</td>\n",
+       "      <td>0.095580</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "thirty_day_mort     False      True\n",
+       "gender                             \n",
+       "F                0.895088  0.104912\n",
+       "M                0.904420  0.095580"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mimic_icu_cohort.groupby(\"gender\")[\"thirty_day_mort\"].value_counts(normalize=True).unstack(\"thirty_day_mort\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cb607182",
    "metadata": {},
@@ -1996,6 +2106,33 @@
     "\n",
     "1. Graphical summaries of `thirty_day_mort` vs other predictors."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54b81545-8b43-4d5b-9954-4391b3a09b09",
+   "metadata": {},
+   "source": [
+    "## Pros and Cons of Python for Data Science\n",
+    "\n",
+    "\n",
+    "__Pros__: \n",
+    "- General purpose $\\rightarrow$ can directly use the data analysis result to different disciplines\n",
+    "- Wide user base $\\rightarrow$ rich package ecosystem\n",
+    "- Readable and fast\n",
+    "\n",
+    "__Cons__: \n",
+    "- Less statistical analysis packages\n",
+    "- Libraries may be more hard to understand\n",
+    "- Visualization is more convoluted than R"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13301a84",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
