--- a/module1-02-R/module1-02-R.ipynb
+++ b/module1-02-R/module1-02-R.ipynb
@@ -154,7 +154,7 @@
    "source": [
     "# getwd() to check the current working directory, setwd() to change it\n",
     "# path to the MIMIC data\n",
-    "mimic_path <- \"/Users/qian/Documents/GitHub/2022-July-Workshop/MIMIC\"\n",
+    "mimic_path <- \"/home/shared/1.0\"\n",
     "mimic_path"
    ]
   },
