--- a/module1-03-Python/module1-03-Python.ipynb
+++ b/module1-03-Python/module1-03-Python.ipynb
@@ -92,7 +92,7 @@
     "import pandas as pd\n",
     "# we also load numpy for array computation for convenience\n",
     "import numpy as np\n",
-    "mimic_path = \"../mimic-iv-1.0/\""
+    "mimic_path = \"/home/shared/1.0\""
    ]
   },
   {
