minor updates GeneticsMakie

--- a/module2-02-GeneticsMakie/module2-02-GeneticsMakie.ipynb
+++ b/module2-02-GeneticsMakie/module2-02-GeneticsMakie.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe420e2f",
+   "id": "2a58697f",
    "metadata": {},
    "source": [
     "   <p align=\"center\">\n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f073233",
+   "id": "1c8d37c3",
    "metadata": {},
    "source": [
     "Visualizing the backbone of a LocusZoom plot requires genetic association data, gene annotation data, and LD reference panel. "
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "51ddb631",
+   "id": "0aebdda9",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ae574bff",
+   "id": "5ccc8fed",
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e2c7e279",
+   "id": "4ef3d46b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "099e6720",
+   "id": "8e93ff10",
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5a510b0b",
+   "id": "f7270907",
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5130d766",
+   "id": "acc2b6bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4c6c799d",
+   "id": "f1464cd7",
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "47600ca0",
+   "id": "55dc5d9e",
    "metadata": {
     "scrolled": true
    },
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3de4a1d2",
+   "id": "28d3c259",
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c361fa97",
+   "id": "483a1849",
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a5fd60d6",
+   "id": "4c45b78f",
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f8d6bfc5",
+   "id": "ae1495e0",
    "metadata": {},
    "outputs": [
     {
@@ -630,10 +630,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "45d423e2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 73.789035 seconds (245.55 M allocations: 12.107 GiB, 3.41% gc time, 84.40% compilation time)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Working on ADAMTSL3 gene\n",
+      "└ @ Main In[15]:3\n",
+      "┌ Info: Subsetting GWAS results\n",
+      "└ @ Main In[15]:7\n",
+      "┌ Info: Plotting LocusZoom\n",
+      "└ @ Main In[15]:9\n"
+     ]
+    }
+   ],
    "source": [
     "function locuszoom(genes)\n",
     "    for gene in genes\n",
@@ -679,17 +699,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ef6762ba",
+   "execution_count": 16,
+   "id": "6e8bd4b3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 10.403400 seconds (57.06 M allocations: 2.102 GiB, 3.55% gc time)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Working on ADAMTSL3 gene\n",
+      "└ @ Main In[15]:3\n",
+      "┌ Info: Subsetting GWAS results\n",
+      "└ @ Main In[15]:7\n",
+      "┌ Info: Plotting LocusZoom\n",
+      "└ @ Main In[15]:9\n"
+     ]
+    }
+   ],
    "source": [
     "@time locuszoom(loci.gene)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9e941dc0",
+   "id": "8231a923",
    "metadata": {},
    "source": [
     "   <p align=\"center\">\n",
