shutdown kernel instruction

--- a/module1-03-Python/module1-03-Python.ipynb
+++ b/module1-03-Python/module1-03-Python.ipynb
@@ -73,6 +73,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8695f017",
+   "metadata": {},
+   "source": [
+    "## Before We move on...\n",
+    "\n",
+    "We have limited resources for each user on the cloud. Don't forget to shut down the kernels you are not using. \n",
+    "\n",
+    "![](shutdown_kernel.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7c5beedf",
    "metadata": {},
    "source": [
