--- a/module2-01-GeneticVariantData/GeneticVariantData.ipynb
+++ b/module2-01-GeneticVariantData/GeneticVariantData.ipynb
@@ -13,7 +13,12 @@
    "id": "f17ba94c",
    "metadata": {},
    "source": [
-    "For analysis of genetic variants, single nucleotide polymorphism (SNP) information is widely used. A SNP corresponds to a nucleotide position on the genome where some degree of variation has been observed in a population, with each individual have one of several possible alleles at that position on each of a pair of chromosomes. The alleles are often classified as a reference allele (REF, allele on the [reference genome](https://en.wikipedia.org/wiki/Reference_genome)) and an alternative allele (ALT).  The most widely used repository for SNP information is [dbSNP](https://www.ncbi.nlm.nih.gov/snp/), where each SNP is indexed by an identifier beginning with `rs` (\"rsID\"). We commonly use biallelic SNPs for many analyses.\n",
+    "For analysis of genetic variants, single nucleotide polymorphism (SNP) information is widely used. \n",
+    "\n",
+    "- A SNP corresponds to a nucleotide position on the genome where some degree of variation has been observed in a population, with each individual have one of several possible alleles at that position on each of a pair of chromosomes. \n",
+    "- The alleles are often classified as a reference allele (REF, allele on the [reference genome](https://en.wikipedia.org/wiki/Reference_genome)) and alternative alleles (ALT).  \n",
+    "- The most widely used repository for SNP information is [dbSNP](https://www.ncbi.nlm.nih.gov/snp/), where each SNP is indexed by an identifier beginning with `rs` (\"rsID\"). \n",
+    "- We commonly use biallelic SNPs for many analyses. We will assume biallelic SNPs for this tutorial.\n",
     "\n",
     "\n",
     "The _genotypes_ of each sample for each variant is commonly coded in:\n",
@@ -58,13 +63,13 @@
     "### Variant Call Format (`.vcf`)\n",
     "Text-based format is the most intuitive to represent genetic variants. It is the most flexible format to include diverse information on the samples and variants.\n",
     "\n",
-    "(For raw text files)\n",
+    "(For raw text format)\n",
     "- __Pros__: Highly flexible, easy to parse and interpret\n",
     "- __Cons__: Large file size\n",
     "\n",
     "With the scale of recent genetic data, with data set like UK Biobank having near a million subjects and millions of variants, the storage needed for storing a raw VCF file is prohibitively huge. A common approach to remedy this is storing the data in a compressed form (such as `.gz` file) and decompress it at analysis time as a stream. However, there is a trade-off between stored file size and time needed for decompression.\n",
     "\n",
-    "(For compressed text files)\n",
+    "(For compressed format)\n",
     "- __Pros__: Reasonable file size with flexible representation\n",
     "- __Cons__: Takes too long to decompress\n",
     "\n",
@@ -168,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "id": "e6db307c",
    "metadata": {},
    "outputs": [
@@ -178,7 +183,7 @@
        "1356"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "id": "03b376e2",
    "metadata": {},
    "outputs": [
@@ -199,7 +204,7 @@
        "191"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "id": "f73c6e3b",
    "metadata": {},
    "outputs": [
@@ -262,7 +267,7 @@
        " \"HG00428\""
       ]
      },
-     "execution_count": 66,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "id": "ae950702",
    "metadata": {},
    "outputs": [
@@ -350,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "id": "7c7b5f33",
    "metadata": {},
    "outputs": [
@@ -467,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "id": "fa7abcb0",
    "metadata": {},
    "outputs": [
@@ -503,7 +508,7 @@
        ")"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "id": "5ad9e533",
    "metadata": {},
    "outputs": [
@@ -549,7 +554,7 @@
        "  20 │ 0          HG00119    0          0          0          -9"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "id": "88ff4de4",
    "metadata": {},
    "outputs": [
@@ -595,7 +600,7 @@
        "   7 │ 22          rs114690707               0.0  20000771  C        A"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 10,
    "id": "a4a688fa",
    "metadata": {},
    "outputs": [
@@ -625,7 +630,7 @@
        "0x03"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,17 +741,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "id": "87f3d7d6",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: using BGEN.samples in module Main conflicts with an existing identifier.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "Bgen(IOStream(<file test_bgen.bgen>), 0x0000000000020c71, BGEN.Header(0x000006d3, 0x00000014, 0x0000054c, 0x000000bf, 0x02, 0x02, false), [\"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\", \"10\"  …  \"182\", \"183\", \"184\", \"185\", \"186\", \"187\", \"188\", \"189\", \"190\", \"191\"], nothing)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 13,
    "id": "fc0b5dc1",
    "metadata": {},
    "outputs": [
@@ -802,7 +814,7 @@
        " \"191\""
       ]
      },
-     "execution_count": 74,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 14,
    "id": "8dc9d0b0",
    "metadata": {},
    "outputs": [
@@ -883,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 15,
    "id": "c353baac",
    "metadata": {},
    "outputs": [
@@ -963,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 16,
    "id": "9ec6c979",
    "metadata": {},
    "outputs": [],
@@ -973,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 17,
    "id": "2dcaca10",
    "metadata": {},
    "outputs": [],
@@ -983,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 18,
    "id": "a3fd819d",
    "metadata": {},
    "outputs": [
@@ -1001,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 19,
    "id": "bad153f6",
    "metadata": {},
    "outputs": [
@@ -1019,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 20,
    "id": "fc7c9ad9",
    "metadata": {},
    "outputs": [],
@@ -1029,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 21,
    "id": "1312a521",
    "metadata": {},
    "outputs": [
@@ -1039,7 +1051,7 @@
        "(UInt8[0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00  …  0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00], UInt8[0x00], 0x0000000000000001)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1059,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 22,
    "id": "49e3d9d8",
    "metadata": {},
    "outputs": [
@@ -1095,7 +1107,7 @@
        " 0x00"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1129,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 23,
    "id": "8144feb3",
    "metadata": {},
    "outputs": [
@@ -1192,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 24,
    "id": "7139e283",
    "metadata": {},
    "outputs": [
@@ -1257,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 25,
    "id": "37d6aa7e",
    "metadata": {},
    "outputs": [],
@@ -1267,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 26,
    "id": "5d479456",
    "metadata": {},
    "outputs": [
@@ -1301,7 +1313,7 @@
        "   5 │ HG00101  NA"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1321,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 27,
    "id": "8f71271f",
    "metadata": {},
    "outputs": [
@@ -1356,7 +1368,7 @@
        "\u001b[36m                                                                1 column omitted\u001b[0m"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1379,7 +1391,13 @@
    "id": "14bd20aa",
    "metadata": {},
    "source": [
-    "[Minor allele frequency](https://en.wikipedia.org/wiki/Minor_allele_frequency) (MAF) is widely used for determining if a variant is rare or frequent, and in GWAS, it is used for measuring information content of a variant. One such measure is the ratio of actual numerical variance and expected variance from the binomial model ($2 \\hat{p}(1-\\hat{p})$, where $\\hat{p}$ is the MAF). How would you compute minor allele frequencies using the packages we used? How would you determine the minor/major allele? How would you compute the variance ratio measure? Modify the code above to print out the minor allele, MAF, and the variance ratio. "
+    "[Minor allele frequency](https://en.wikipedia.org/wiki/Minor_allele_frequency) (MAF) is widely used for determining if a variant is rare or frequent, and in GWAS, it is used for measuring information content of a variant. One such measure is the ratio of actual numerical variance and expected variance from the binomial model ($2 \\hat{p}(1-\\hat{p})$, where $\\hat{p}$ is the MAF in $[0, 1]$). \n",
+    "\n",
+    "By modifying the code cells above...\n",
+    "1. Compute minor allele frequencies using the packages we used. \n",
+    "2. Determine the minor/major allele.\n",
+    "3. Compute the variance ratio measure? \n",
+    "4. Print out the minor allele, MAF, and the variance ratio for each variant."
    ]
   },
   {
@@ -1394,30 +1412,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "8521d1a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PLINK v2.00a2.3 64-bit (24 Jan 2020)           www.cog-genomics.org/plink/2.0/\n",
+      "(C) 2005-2020 Shaun Purcell, Christopher Chang   GNU General Public License v3\n",
+      "Logging to test_bgen.log.\n",
+      "Options in effect:\n",
+      "  --export bgen-1.3\n",
+      "  --out test_bgen\n",
+      "  --vcf test_vcf.vcf.gz\n",
+      "\n",
+      "Start time: Sun Jul 17 16:37:54 2022\n",
+      "16384 MiB RAM detected; reserving 8192 MiB for main workspace.\n",
+      "Using up to 8 compute threads.\n",
+      "\r",
+      "--vcf: 1k variants scanned.\r",
+      "--vcf: 1356 variants scanned.\n",
+      "\r",
+      "--vcf: 0k variants converted.    \b\b\b\b\r",
+      "--vcf: test_bgen-temporary.pgen + test_bgen-temporary.pvar +\n",
+      "test_bgen-temporary.psam written.\n",
+      "191 samples (0 females, 0 males, 191 ambiguous; 191 founders) loaded from\n",
+      "test_bgen-temporary.psam.\n",
+      "1356 variants loaded from test_bgen-temporary.pvar.\n",
+      "Note: No phenotype data present.\n",
+      "Writing test_bgen.bgen ... 0%\b\bdone.\n",
+      "Writing test_bgen.sample ... done.\n",
+      "End time: Sun Jul 17 16:37:54 2022\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Process(`\u001b[4mplink2\u001b[24m \u001b[4m--vcf\u001b[24m \u001b[4mtest_vcf.vcf.gz\u001b[24m \u001b[4m--export\u001b[24m \u001b[4mbgen-1.3\u001b[24m \u001b[4m--out\u001b[24m \u001b[4mtest_bgen\u001b[24m`, ProcessExited(0))"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "run(`plink2 --vcf test_vcf.vcf.gz --export bgen-1.3 --out test_bgen`) # ALT allele comes first"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "06318266",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PLINK v2.00a2.3 64-bit (24 Jan 2020)           www.cog-genomics.org/plink/2.0/\n",
+      "(C) 2005-2020 Shaun Purcell, Christopher Chang   GNU General Public License v3\n",
+      "Logging to test_bed.log.\n",
+      "Options in effect:\n",
+      "  --make-bed\n",
+      "  --out test_bed\n",
+      "  --vcf test_vcf.vcf.gz\n",
+      "\n",
+      "Start time: Sun Jul 17 16:37:54 2022\n",
+      "16384 MiB RAM detected; reserving 8192 MiB for main workspace.\n",
+      "Using up to 8 compute threads.\n",
+      "\r",
+      "--vcf: 1k variants scanned.\r",
+      "--vcf: 1356 variants scanned.\n",
+      "\r",
+      "--vcf: 0k variants converted.    \b\b\b\b\r",
+      "--vcf: test_bed-temporary.pgen + test_bed-temporary.pvar +\n",
+      "test_bed-temporary.psam written.\n",
+      "191 samples (0 females, 0 males, 191 ambiguous; 191 founders) loaded from\n",
+      "test_bed-temporary.psam.\n",
+      "1356 variants loaded from test_bed-temporary.pvar.\n",
+      "Note: No phenotype data present.\n",
+      "Writing test_bed.fam ... done.\n",
+      "Writing test_bed.bim ... done.\n",
+      "Writing test_bed.bed ... 0%\b\bdone.\n",
+      "End time: Sun Jul 17 16:37:54 2022\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Process(`\u001b[4mplink2\u001b[24m \u001b[4m--vcf\u001b[24m \u001b[4mtest_vcf.vcf.gz\u001b[24m \u001b[4m--make-bed\u001b[24m \u001b[4m--out\u001b[24m \u001b[4mtest_bed\u001b[24m`, ProcessExited(0))"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "run(`plink2 --vcf test_vcf.vcf.gz --make-bed --out test_bed`) # ALT allele comes first"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "146a9b54",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PLINK v2.00a2.3 64-bit (24 Jan 2020)           www.cog-genomics.org/plink/2.0/\n",
+      "(C) 2005-2020 Shaun Purcell, Christopher Chang   GNU General Public License v3\n",
+      "Logging to test_pgen.log.\n",
+      "Options in effect:\n",
+      "  --make-pgen\n",
+      "  --out test_pgen\n",
+      "  --vcf test_vcf.vcf.gz\n",
+      "\n",
+      "Start time: Sun Jul 17 16:37:54 2022\n",
+      "16384 MiB RAM detected; reserving 8192 MiB for main workspace.\n",
+      "Using up to 8 compute threads.\n",
+      "\r",
+      "--vcf: 1k variants scanned.\r",
+      "--vcf: 1356 variants scanned.\n",
+      "\r",
+      "--vcf: 0k variants converted.    \b\b\b\b\r",
+      "--vcf: test_pgen-temporary.pgen + test_pgen-temporary.pvar +\n",
+      "test_pgen-temporary.psam written.\n",
+      "191 samples (0 females, 0 males, 191 ambiguous; 191 founders) loaded from\n",
+      "test_pgen-temporary.psam.\n",
+      "1356 variants loaded from test_pgen-temporary.pvar.\n",
+      "Note: No phenotype data present.\n",
+      "Writing test_pgen.psam ... done.\n",
+      "Writing test_pgen.pvar ... 0%\b\b0%\b\b1%\b\b1%\b\b2%\b\b2%\b\b3%\b\b3%\b\b4%\b\b4%\b\b5%\b\b5%\b\b6%\b\b6%\b\b7%\b\b7%\b\b8%\b\b8%\b\b9%\b\b9%\b\b10%\b\b\b10%\b\b\b11%\b\b\b11%\b\b\b12%\b\b\b12%\b\b\b13%\b\b\b13%\b\b\b14%\b\b\b14%\b\b\b15%\b\b\b15%\b\b\b16%\b\b\b16%\b\b\b17%\b\b\b17%\b\b\b18%\b\b\b18%\b\b\b19%\b\b\b19%\b\b\b20%\b\b\b20%\b\b\b21%\b\b\b21%\b\b\b22%\b\b\b22%\b\b\b23%\b\b\b23%\b\b\b24%\b\b\b25%\b\b\b25%\b\b\b26%\b\b\b26%\b\b\b27%\b\b\b27%\b\b\b28%\b\b\b28%\b\b\b29%\b\b\b29%\b\b\b30%\b\b\b30%\b\b\b31%\b\b\b31%\b\b\b32%\b\b\b32%\b\b\b33%\b\b\b33%\b\b\b34%\b\b\b34%\b\b\b35%\b\b\b35%\b\b\b36%\b\b\b36%\b\b\b37%\b\b\b37%\b\b\b38%\b\b\b38%\b\b\b39%\b\b\b39%\b\b\b40%\b\b\b40%\b\b\b41%\b\b\b41%\b\b\b42%\b\b\b42%\b\b\b43%\b\b\b43%\b\b\b44%\b\b\b44%\b\b\b45%\b\b\b45%\b\b\b46%\b\b\b46%\b\b\b47%\b\b\b47%\b\b\b48%\b\b\b48%\b\b\b49%\b\b\b50%\b\b\b50%\b\b\b51%\b\b\b51%\b\b\b52%\b\b\b52%\b\b\b53%\b\b\b53%\b\b\b54%\b\b\b54%\b\b\b55%\b\b\b55%\b\b\b56%\b\b\b56%\b\b\b57%\b\b\b57%\b\b\b58%\b\b\b58%\b\b\b59%\b\b\b59%\b\b\b60%\b\b\b60%\b\b\b61%\b\b\b61%\b\b\b62%\b\b\b62%\b\b\b63%\b\b\b63%\b\b\b64%\b\b\b64%\b\b\b65%\b\b\b65%\b\b\b66%\b\b\b66%\b\b\b67%\b\b\b67%\b\b\b68%\b\b\b68%\b\b\b69%\b\b\b69%\b\b\b70%\b\b\b70%\b\b\b71%\b\b\b71%\b\b\b72%\b\b\b72%\b\b\b73%\b\b\b73%\b\b\b74%\b\b\b75%\b\b\b75%\b\b\b76%\b\b\b76%\b\b\b77%\b\b\b77%\b\b\b78%\b\b\b78%\b\b\b79%\b\b\b79%\b\b\b80%\b\b\b80%\b\b\b81%\b\b\b81%\b\b\b82%\b\b\b82%\b\b\b83%\b\b\b83%\b\b\b84%\b\b\b84%\b\b\b85%\b\b\b85%\b\b\b86%\b\b\b86%\b\b\b87%\b\b\b87%\b\b\b88%\b\b\b88%\b\b\b89%\b\b\b89%\b\b\b90%\b\b\b90%\b\b\b91%\b\b\b91%\b\b\b92%\b\b\b92%\b\b\b93%\b\b\b93%\b\b\b94%\b\b\b94%\b\b\b95%\b\b\b95%\b\b\b96%\b\b\b96%\b\b\b97%\b\b\b97%\b\b\b98%\b\b\b98%\b\b\b99%\b\b\bdone.\n",
+      "Writing test_pgen.pgen ... 0%\b\bdone.\n",
+      "End time: Sun Jul 17 16:37:54 2022\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Process(`\u001b[4mplink2\u001b[24m \u001b[4m--vcf\u001b[24m \u001b[4mtest_vcf.vcf.gz\u001b[24m \u001b[4m--make-pgen\u001b[24m \u001b[4m--out\u001b[24m \u001b[4mtest_pgen\u001b[24m`, ProcessExited(0))"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "run(`plink2 --vcf test_vcf.vcf.gz --make-pgen --out test_pgen`)"
    ]
@@ -1455,14 +1601,6 @@
     "- `TraitSimulation.jl` : Quickly simulate phenotypes under a variety of genetic architectures.\n",
     "- `QuasiCopula.jl` : Analysis of correlated data with specified marginals with a flexible quasi-copula distribution"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15158a4a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
